update navbar & BEM post

--- a/public/sass/_article.scss
+++ b/public/sass/_article.scss
@@ -3,7 +3,7 @@ article {
     // background-color: rgb(206, 193, 162);
     // padding: 3% 3%;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-    border: 1.5px solid rgb(184, 184, 184) ;
+    // border: 1.5px solid rgb(184, 184, 184) ;
 }
 
 
