--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -5,5 +5,11 @@ $desktop: 992px;
 $largeDesktop : 1200px;
 // 35em
 // 50em
-$color_primary: #e78300;
-$color_secondary: #928f8f;
+// $color_title: #e78300;
+// $color_secondary: #928f8f;
+// $color_primary: #00000000;
+
+$color_cathegories: #FFFF;
+
+$font_title: "Francois One", sans-serif;
+$font_text: "Didact Gothic", sans-serif;
