--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,113 +1,16 @@
-header {
-  padding: 1% 1% 1% 1%;
-  margin-right: 15px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-}
-
-#banner__header {
-  height: 55px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-}
-
-#banner__header--title {
-  display: flex;
-}
-
-#banner__header--title__logo {
-  width: 35px;
-  margin-right: 20px;
-}
-
-#banner__header--title__title {
-  font-weight: 700;
-}
-
-#banner__header--navbar {
-  width: 30%;
-  display: flex;
-  justify-content: space-around;
-  list-style: none;
+body {
+  font-family: "Didact Gothic";
   margin: 0;
   padding: 0;
+  color: #000000;
 }
 
-#banner__header--navbar li {
-  margin: 1%;
+* {
+  box-sizing: border-box;
 }
 
-#banner__header--navbar li a {
-  color: #e78300;
-  text-decoration: none;
-}
-
-#header_text {
-  color: #928f8f;
-  text-align: justify;
-}
-
-article {
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  border: 1.5px solid #b8b8b8;
-}
-
-.article__blockImg--img__img {
-  max-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-}
-
-.article__body {
-  padding: 0% 3%;
-}
-
-.article__body--title {
-  margin: 0;
-  margin-bottom: 2%;
-  color: #e78300;
-  cursor: pointer;
-}
-
-.article__body--author,
-.article__body--date {
-  margin: 0;
-}
-
-.article__body--hr {
-  width: 40px;
-  height: 5px;
-  margin: 0;
-  margin-bottom: 5px;
-  background-color: black;
-  border: none;
-}
-
-.article__body--blockAuthor__favicon,
-.article__body--date__favicon {
-  margin-right: 7px;
-}
-
-.article__body--blockAuthor,
-.article__body--date {
-  margin: 0;
-}
-
-.article__body--blockAuthor__author {
-  color: black;
-  margin: 0;
-}
-
-h2 {
-  font-size: 2.1739130435rem;
-}
-
-h2 {
-  font-size: 1.0869565217rem;
-  line-height: 1.4;
-  margin-top: 0;
-  margin-bottom: 0.5rem;
+*::after {
+  box-sizing: inherit;
 }
 
 h1,
@@ -121,6 +24,69 @@ h6 {
   font-weight: normal;
   color: inherit;
   text-rendering: optimizeLegibility;
+}
+
+h2 {
+  font-size: 2.1739130435rem;
+}
+
+h2 {
+  font-size: 1.0869565217rem;
+  line-height: 1.4;
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+}
+
+header {
+  padding: 1% 1% 1% 1%;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  margin-right: 15px;
+}
+
+#banner__header {
+  height: 55px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+#banner__header--title {
+  display: flex;
+  align-items: center;
+}
+
+#banner__header--title__logo {
+  width: 35px;
+  margin-right: 20px;
+}
+
+#banner__header--title__title {
+  font-family: "Francois One", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 800;
+}
+
+#banner__header--navbar {
+  width: 170px;
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#banner__header--navbar li {
+  margin: 1%;
+}
+
+#banner__header--navbar li a {
+  color: #000000;
+  text-decoration: none;
+}
+
+#header_text {
+  color: #928f8f;
+  text-align: justify;
 }
 
 #content {
@@ -138,21 +104,6 @@ h6 {
 #content section:nth-child(3),
 #content section:nth-child(4) {
   flex: 0 1 50%;
-}
-
-h3 {
-  color: #e78300;
-}
-
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-nav ul li a {
-  color: #e78300;
-  text-decoration: none;
 }
 
 @media screen and (min-width: 576px) {
@@ -198,8 +149,9 @@ nav ul li a {
     flex: 0 1 20%;
   }
 
-  .article__body--title {
+  .article__body--title, .post__body--title {
     font-size: 2.1739130435rem;
+    line-height: 1;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -217,6 +169,153 @@ nav ul li a {
   #header_text {
     margin-right: 30%;
   }
+}
+article {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+.article__blockImg--img__img {
+  max-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+}
+
+.article__body {
+  padding: 0% 3%;
+}
+
+.article__body--title {
+  margin: 0;
+  margin-bottom: 2%;
+  color: #000000;
+  cursor: pointer;
+}
+
+.article__body--author,
+.article__body--date {
+  margin: 0;
+}
+
+.article__body--hr {
+  width: 40px;
+  height: 5px;
+  margin: 0;
+  margin-bottom: 5px;
+  background-color: black;
+  border: none;
+}
+
+.article__body--blockAuthor__favicon,
+.article__body--date__favicon {
+  margin-right: 7px;
+}
+
+.article__body--blockAuthor,
+.article__body--date {
+  margin: 0;
+}
+
+.article__body--blockAuthor__author {
+  color: black;
+  margin: 0;
+}
+
+.navbar__title {
+  color: #e78300;
+  font-weight: 800;
+}
+
+.navbar__nav {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  margin-left: 10%;
+}
+
+.navbar__nav--item {
+  color: #e78300;
+  line-height: 1.5;
+}
+
+.navbar__nav--link {
+  text-decoration: none;
+  color: #e78300;
+  margin-left: 15%;
+}
+
+.navbar__nav--icon + .navbar__nav--link {
+  text-decoration: none;
+  color: #e78300;
+  margin-left: 7%;
+}
+
+/*
+    STYLE ARTICLE DU BLOG AVEC METHODE BEM
+*/
+.post {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+.post__header {
+  position: relative;
+}
+
+.post__header--categories {
+  font-family: "Francois One", sans-serif;
+  color: #FFFF;
+  text-shadow: 1px 1px 2px #000000;
+  position: absolute;
+  margin: 5px 10px;
+}
+
+.post__header--img {
+  max-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+}
+
+.post__body {
+  padding: 0 3% 15% 3%;
+}
+
+.post__body--title {
+  margin: 0;
+  margin-bottom: 2%;
+  color: #e78300;
+  cursor: pointer;
+}
+
+.post__body--title:after {
+  content: "";
+  background: #000000;
+  height: 5px;
+  width: 3em;
+  display: block;
+  margin-top: 0.2em;
+}
+
+span {
+  display: block;
+}
+
+.post__meta--favicon {
+  margin-right: 7px;
+}
+
+.post__meta--author {
+  color: #000000;
+}
+
+.post__body--excerpt {
+  color: #928f8f;
+}
+
+.banner__header--title__title {
+  font-family: "Francois One", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 800;
 }
 
 /*# sourceMappingURL=app.css.map */
