--- a/public/sass/_navbar.scss
+++ b/public/sass/_navbar.scss
@@ -1,7 +1,6 @@
 // NAVBAR
 .navbar__title {
     color: $color_title;
-    font-weight: 800;
 }
 
 .navbar__nav {
@@ -22,9 +21,10 @@
 .navbar__nav--link {
     text-decoration: none;
     color: $color_title;
-    margin-left: 15%;
+    margin-left: 30px;
 }
-// 
+
+//  lien avec un icon
 .navbar__nav--icon + .navbar__nav--link {
-    margin-left: 7%;
+    margin-left: 10px;
 }
