--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -58,7 +58,6 @@
 #content section:nth-child(4) {
     // background-color: rebeccapurple;
     flex: 0 1 50%;
-
 }
 
 
@@ -86,6 +85,18 @@
         justify-content: space-between;
         align-items: center;
     }
+    
+    .post {
+        min-height: 450px;
+        max-height: 450px;
+    }
+
+    #content section:nth-child(-n+2) {
+        .post {
+            // background-color: rebeccapurple;
+            min-height: 500px;
+        }
+    }
 }
 
 @media screen and (min-width: $tablet) {
@@ -102,6 +113,19 @@
         // background-color: rebeccapurple;
         flex: 0 1 25%;
     }
+    
+    .post {
+        min-height: 400px;
+        max-height: 400px;
+    }
+    
+    #content section:nth-child(-n+3) {
+        .post {
+            // background-color: rebeccapurple;
+            min-height: 500px;
+        }
+    }
+
 }
 
 // 
@@ -109,7 +133,6 @@
     #content section:nth-child(n) {
         // background-color: rebeccapurple;
         flex: 0 1 40%;
-
     }
 
     #content nav,
@@ -118,20 +141,46 @@
     #content section:nth-child(7) {
         // background-color: rebeccapurple;
         flex: 0 1 20%;
-
+    }
+    
+    // height post 
+    .post {
+        min-height: 400px;
+        max-height: 400px;
     }
 
-    .article__body--title, .post__body--title {
-        font-size: 2.1739130435rem;
-        line-height: 1;
+    // height des 3 premier articles
+    #content section:nth-child(-n+3) {
+        .post {
+            // background-color: rebeccapurple;
+            min-height: 500px;
+        }
     }
+
+    // .article__body--title, .post__body--title {
+    //     font-size: 2.1739130435rem;
+    //     line-height: 1;
+    // }
+    
 }
 
 @media screen and (min-width: $largeDesktop) {
     #content section:nth-child(n) {
-        // background-color: rebeccapurple;
         flex: 0 1 calc(100%/3);
+    }
+    
+    // height post 
+    .post {
+        // background-color: rebeccapurple;
+        min-height: 345px;
+        max-height: 345px;
+    }
 
+    #content section:nth-child(-n+4) {
+        .post {
+            // background-color: rebeccapurple;
+            min-height: 500px;
+        }
     }
 
     #content nav,
@@ -140,7 +189,6 @@
     #content section:nth-child(7) {
         // background-color: rebeccapurple;
         flex: 0 1 calc(100%/6);
-
     }
 
     #header_text {
