--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -4,11 +4,12 @@ $tablet: 720px;
 $desktop: 992px;
 $largeDesktop : 1200px;
 
-// $color_title: #e78300;
-// $color_secondary: #928f8f;
-// $color_primary: #00000000;
+$color_title: #e78300;
+$color_secondary: #928f8f;
+$color_primary: #000000;
 
 $color_cathegories: #FFFF;
+$bg_banner: #FFFF;
 
 $font_title: "Francois One", sans-serif;
 $font_text: "Didact Gothic", sans-serif;
