--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -1,42 +1,4 @@
-// body {
-//     font-family: "Didact Gothic";
-//     margin: 0;
-//     padding: 0;
-//     color: $color_primary;
-// }
 
-// * {
-//     box-sizing: border-box;
-// }
-
-// *::after {
-//     box-sizing: inherit;
-// }
-
-// // TITLE
-// h1,
-// h2,
-// h3,
-// h4,
-// h5,
-// h6 {
-//     font-family: "Francois One", sans-serif;
-//     // font-style: normal;
-//     // font-weight: normal;
-//     // color: inherit;
-//     // text-rendering: optimizeLegibility;
-// }
-
-// h2 {
-//     font-size: 2.1739130435rem;
-// }
-
-// h2 {
-//     font-size: 1.0869565217rem;
-//     line-height: 1.4;
-//     margin-top: 0;
-//     margin-bottom: 0.5rem;
-// }
 
 
 
@@ -46,7 +8,7 @@
     flex-wrap: wrap;
 }
 
-// SOUS ELEMENT DE CONT
+// SOUS ELLEMENT DE CONT
 #content>* {
     padding: 1% 1%;
     flex-grow: 0;
@@ -78,7 +40,7 @@
         flex: 0 1 35%;
     }
 
-    .bannerHeader {
+    .bannerHeader, .banner {
         height: 35px;
 
         display: flex;
@@ -124,6 +86,10 @@
             // background-color: rebeccapurple;
             min-height: 500px;
         }
+    }
+
+    .banner {
+        display: none;
     }
 
 }
