--- a/public/css/app.css
+++ b/public/css/app.css
@@ -100,7 +100,7 @@ header {
   width: 100%;
   height: 55px;
   position: absolute;
-  top: 300px;
+  top: 1150px;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
@@ -149,8 +149,9 @@ header {
   flex-basis: 100%;
 }
 
-#content section:nth-child(3),
-#content section:nth-child(4) {
+#content section:nth-child(5),
+#content section:nth-child(6),
+#content section:nth-child(7) {
   flex: 0 1 50%;
 }
 
@@ -166,8 +167,17 @@ header {
     flex: 0 1 35%;
   }
 
-  .bannerHeader, .banner {
+  .bannerHeader {
     height: 35px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .banner {
+    height: 35px;
+    position: absolute;
+    top: 1210px;
     display: flex;
     justify-content: space-between;
     align-items: center;
