--- a/public/css/app.css
+++ b/public/css/app.css
@@ -98,19 +98,19 @@ header {
 */
 .banner {
   width: 100%;
-  height: 55px;
+  height: 35px;
   position: absolute;
   top: 300px;
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
   background-color: #FFFF;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
 .banner__title {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .banner__title--logo {
@@ -149,9 +149,8 @@ header {
   flex-basis: 100%;
 }
 
-#content section:nth-child(5),
-#content section:nth-child(6),
-#content section:nth-child(7) {
+#content section:nth-child(3),
+#content section:nth-child(4) {
   flex: 0 1 50%;
 }
 
@@ -167,17 +166,8 @@ header {
     flex: 0 1 35%;
   }
 
-  .bannerHeader {
+  .bannerHeader, .banner {
     height: 35px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .banner {
-    height: 35px;
-    position: absolute;
-    top: 1210px;
     display: flex;
     justify-content: space-between;
     align-items: center;
