--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -13,3 +13,6 @@ $bg_banner: #FFFF;
 
 $font_title: "Francois One", sans-serif;
 $font_text: "Didact Gothic", sans-serif;
+
+$btn_bg: #FFFF;
+$btn_color: #000000;
