--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -1,7 +1,4 @@
  
-// $color_title: #e78300;
-// $color_secondary: #928f8f;
-// $color_primary: #000000;
 
 @import "variables.scss";
 @import "typographyes.scss";
@@ -13,6 +10,7 @@
 
 @import "style.scss";
 
-// @import "article.scss";
 @import "navbar.scss";
 @import "post.scss";
+
+@import "btn.scss";
