add rotate article

--- a/public/sass/_btn.scss
+++ b/public/sass/_btn.scss
@@ -8,6 +8,7 @@
     color: $btn_color;
     padding: 0% 25px;
     border-radius: 20px;
+    border: 1px solid $btn_color;
     margin-right: 10%;
 }
 
