--- a/public/css/app.css
+++ b/public/css/app.css
@@ -55,13 +55,14 @@ header {
 .bannerHeader {
   height: 55px;
   display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
+  flex-direction: column;
 }
 
 .bannerHeader__title {
+  height: 25px;
   display: flex;
   align-items: center;
+  padding-left: 15px;
 }
 
 .bannerHeader__title--logo {
@@ -76,16 +77,15 @@ header {
 }
 
 .bannerHeader__navbar {
-  width: 170px;
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-end;
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
 .bannerHeader__navbar--icon {
-  margin: 1%;
+  margin: 5px;
 }
 
 .header_text {
@@ -102,8 +102,7 @@ header {
   position: absolute;
   top: 1150px;
   display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
+  flex-direction: column;
   background-color: #FFFF;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
@@ -111,6 +110,7 @@ header {
 .banner__title {
   display: flex;
   align-items: center;
+  height: 25px;
 }
 
 .banner__title--logo {
@@ -125,9 +125,8 @@ header {
 }
 
 .banner__navbar {
-  width: 170px;
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-end;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -170,6 +169,7 @@ header {
   .bannerHeader {
     height: 35px;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
   }
@@ -179,6 +179,7 @@ header {
     position: absolute;
     top: 1210px;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
   }
@@ -329,6 +330,10 @@ header {
   cursor: pointer;
 }
 
+.post__body--title:hover {
+  color: #ce7500;
+}
+
 .post__body--title:after {
   content: "";
   background: #000000;
@@ -355,6 +360,19 @@ span {
   text-align: justify;
 }
 
+/* 
+    ROTATION SUR LES ARTICLES, 
+    - PAIR
+    - IMPAIRE
+*/
+#content section:nth-child(even) .post {
+  transform: rotate(-1deg);
+}
+
+#content section:nth-child(odd) .post {
+  transform: rotate(1deg);
+}
+
 .block-btn {
   display: flex;
   justify-content: flex-end;
@@ -365,6 +383,7 @@ span {
   color: #000000;
   padding: 0% 25px;
   border-radius: 20px;
+  border: 1px solid #000000;
   margin-right: 10%;
 }
 
