--- a/public/sass/_banner.scss
+++ b/public/sass/_banner.scss
@@ -13,8 +13,7 @@
         top: 1150px;
         
     display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
+    flex-direction: column;
 
     background-color: $bg_banner;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -24,6 +23,7 @@
 .banner__title {
     display: flex;
     align-items: center;
+    height: 25px;
 }
 
 // LOGO
@@ -41,9 +41,8 @@
 
 // NAVBAR HEADER
 .banner__navbar {
-    width: 170px;
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-end;
 
     list-style: none;
     margin: 0;
