--- a/public/sass/_header.scss
+++ b/public/sass/_header.scss
@@ -15,14 +15,19 @@ header {
     height: 55px;
 
     display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
+    flex-direction: column;
+    // justify-content: space-between;
+    // align-items: flex-end;
 }
 
 // BANNER TITLE
 .bannerHeader__title {
+    height: 25px;
+    
     display: flex;
     align-items: center;
+
+    padding-left: 15px;
 }
 
 // LOGO
@@ -40,9 +45,8 @@ header {
 
 // NAVBAR HEADER
 .bannerHeader__navbar {
-    width: 170px;
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-end;
 
     list-style: none;
     margin: 0;
@@ -50,7 +54,7 @@ header {
 }
 
 .bannerHeader__navbar--icon {
-    margin: 1%;
+    margin: 5px;
 }
 
 
