--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -16,3 +16,6 @@ $font_text: "Didact Gothic", sans-serif;
 
 $btn_bg: #FFFF;
 $btn_color: #000000;
+
+$post_rotate_even: -1deg;
+$post_rotate_odd: 1deg;
