--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -45,6 +45,7 @@
         height: 35px;
 
         display: flex;
+        flex-direction: row;
         justify-content: space-between;
         align-items: center;
     }
@@ -55,6 +56,7 @@
             top: 1210px;
 
         display: flex;
+        flex-direction: row;
         justify-content: space-between;
         align-items: center;
     }
