--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -1,8 +1,11 @@
+
+// BREAK POINT
 $mobile: 0;
 $small: 576px;
 $tablet: 720px;
 $desktop: 992px;
 $largeDesktop : 1200px;
+$xxlDesktop: 2559px;
 
 $color_title: #e78300;
 $color_secondary: #928f8f;
