--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,7 +7,7 @@
   src: url("../font/Didact_Gothic/DidactGothic-Regular.ttf");
 }
 body {
-  font-family: "Didact Gothic";
+  font-family: "Didact Gothic", sans-serif;
   margin: 0;
   padding: 0;
   color: #000000;
@@ -29,7 +29,6 @@ h5,
 h6 {
   font-family: "Francois One", sans-serif;
   font-style: normal;
-  font-weight: normal;
   color: inherit;
   text-rendering: optimizeLegibility;
   font-weight: 800;
@@ -46,6 +45,15 @@ h2 {
   margin-bottom: 0.5rem;
 }
 
+/*
+    COMPATIBILITE ROTATE
+*/
+/*
+    STYLE ARTICLE DU BLOG AVEC METHODE BEM
+*/
+/*
+    STYLE HEADER 
+*/
 header {
   padding: 1% 1% 1% 1%;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -54,28 +62,25 @@ header {
 
 .bannerHeader {
   height: 55px;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  position: initial;
+  top: 0;
+  background-color: #FFFF;
 }
-
 .bannerHeader__title {
   height: 25px;
   display: flex;
   align-items: center;
-  padding-left: 15px;
 }
-
 .bannerHeader__title--logo {
   width: 35px;
   margin-right: 20px;
 }
-
 .bannerHeader__title--title {
-  font-family: "Francois One", sans-serif;
   font-size: 1.5rem;
-  font-weight: 800;
 }
-
 .bannerHeader__navbar {
   display: flex;
   justify-content: flex-end;
@@ -83,7 +88,6 @@ header {
   margin: 0;
   padding: 0;
 }
-
 .bannerHeader__navbar--icon {
   margin: 5px;
 }
@@ -93,49 +97,157 @@ header {
   text-align: justify;
 }
 
-/*
-    BANNER DEVICE MOBILE
-*/
-.banner {
-  width: 100%;
-  height: 55px;
+.navbar__nav {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  margin-left: 13%;
+}
+.navbar__title {
+  color: #e78300;
+}
+.navbar__nav--item {
+  color: #e78300;
+  line-height: 2;
+}
+.navbar__nav--link {
+  text-decoration: none;
+  color: #e78300;
+  margin-left: 30px;
+}
+.navbar__nav--icon + .navbar__nav--link {
+  margin-left: 10px;
+}
+
+.post {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  border: 1px solid #b8b8b8;
+}
+.post__header {
+  position: relative;
+}
+.post__header--categories {
+  font-family: "Francois One", sans-serif;
+  color: #FFFF;
+  text-shadow: 1px 1px 2px #000000;
   position: absolute;
-  top: 1150px;
+  margin: 5px 10px;
+}
+.post__header--img {
+  max-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+}
+.post__body {
+  padding: 3% 2% 3% 2%;
+}
+.post__body--title {
+  margin: 0;
+  margin-bottom: 2%;
+  color: #e78300;
+  cursor: pointer;
+}
+.post__body--title:hover {
+  color: #ce7500;
+}
+.post__body--title:after {
+  content: "";
+  background: #000000;
+  height: 5px;
+  width: 3em;
+  display: block;
+  margin-top: 0.2em;
+}
+.post__meta span {
+  display: block;
+}
+.post__meta--icon {
+  margin-right: 7px;
+}
+.post__meta--author {
+  color: #000000;
+}
+.post__body--excerpt {
+  color: #928f8f;
+  text-align: justify;
+}
+
+/* 
+ROTATION DES ARTICLES, 
+- PAIR
+- IMPAIRE
+*/
+#content section:nth-child(even) .post {
+  transform: rotate(-1deg);
+  -webkit-transform: rotate();
+  -ms-transform: rotate(-1deg);
+}
+
+#content section:nth-child(odd) .post {
+  transform: rotate(1deg);
+  -webkit-transform: rotate();
+  -ms-transform: rotate(1deg);
+}
+
+.bannerFloat {
+  height: 55px;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  position: absolute;
+  top: 1150px;
   background-color: #FFFF;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
-
-.banner__title {
+.bannerFloat__title {
+  height: 25px;
   display: flex;
   align-items: center;
-  height: 25px;
 }
-
-.banner__title--logo {
+.bannerFloat__title--logo {
   width: 35px;
   margin-right: 20px;
 }
-
-.banner__title--title {
-  font-family: "Francois One", sans-serif;
+.bannerFloat__title--title {
   font-size: 1rem;
-  font-weight: 800;
 }
-
-.banner__navbar {
+.bannerFloat__navbar {
   display: flex;
   justify-content: flex-end;
   list-style: none;
   margin: 0;
   padding: 0;
 }
-
-.banner__navbar--icon {
-  margin: 1%;
+.bannerFloat__navbar--icon {
+  margin: 5px;
 }
 
+.block-btn {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.btn {
+  background-color: #FFFF;
+  color: #000000;
+  padding: 0% 25px;
+  border-radius: 20px;
+  border: 1px solid #000000;
+  margin-right: 10%;
+}
+.btn__link {
+  margin-right: 5px;
+  color: #000000;
+  text-decoration: none;
+}
+
+/* 
+    DISPLAY CONTENT PAGE DISPOSITION NAVBAR ARTICLE
+*/
+/* 
+    FORMAT MOBILE
+*/
 #content {
   display: flex;
   flex-wrap: wrap;
@@ -154,6 +266,9 @@ header {
   flex: 0 1 50%;
 }
 
+/* 
+    FORMAT MOBIL XL
+*/
 @media screen and (min-width: 576px) {
   #content section:nth-child(n) {
     flex: 0 1 65%;
@@ -174,7 +289,7 @@ header {
     align-items: center;
   }
 
-  .banner {
+  .bannerFloat {
     height: 35px;
     position: absolute;
     top: 1210px;
@@ -185,14 +300,16 @@ header {
   }
 
   .post {
-    min-height: 450px;
-    max-height: 450px;
+    height: 450px;
   }
 
   #content section:nth-child(-n+2) .post {
     min-height: 500px;
   }
 }
+/* 
+    FORMAT TABLET
+*/
 @media screen and (min-width: 720px) {
   #content section:nth-child(n) {
     flex: 0 1 50%;
@@ -206,18 +323,20 @@ header {
   }
 
   .post {
-    min-height: 400px;
-    max-height: 400px;
+    height: 400px;
   }
 
   #content section:nth-child(-n+3) .post {
     min-height: 500px;
   }
 
-  .banner {
+  .bannerFloat {
     display: none;
   }
 }
+/* 
+    FORMAT DESKTOP
+*/
 @media screen and (min-width: 992px) {
   #content section:nth-child(n) {
     flex: 0 1 40%;
@@ -231,8 +350,7 @@ header {
   }
 
   .post {
-    min-height: 400px;
-    max-height: 400px;
+    height: 400px;
   }
 
   #content section:nth-child(-n+3) .post {
@@ -245,8 +363,7 @@ header {
   }
 
   .post {
-    min-height: 345px;
-    max-height: 345px;
+    height: 345px;
   }
 
   #content section:nth-child(-n+4) .post {
@@ -260,137 +377,33 @@ header {
     flex: 0 1 calc(100%/6);
   }
 
-  #header_text {
+  .header_text {
     margin-right: 30%;
   }
 }
-/*
-    STYLE NAVBAR DU BLOG AVEC METHODE BEM
-*/
-.navbar__nav {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  margin-left: 13%;
-}
+@media screen and (min-width: 2559px) {
+  #content section:nth-child(n) {
+    flex: 0 1 calc(100%/3);
+  }
 
-.navbar__title {
-  color: #e78300;
-}
+  .post {
+    height: 400px;
+  }
 
-.navbar__nav--item {
-  color: #e78300;
-  line-height: 2;
-}
+  #content section:nth-child(-n+4) .post {
+    min-height: 500px;
+  }
 
-.navbar__nav--link {
-  text-decoration: none;
-  color: #e78300;
-  margin-left: 30px;
-}
+  #content nav,
+#content section:nth-child(4),
+#content section:nth-child(6),
+#content section:nth-child(7) {
+    flex: 0 1 calc(100%/6);
+  }
 
-.navbar__nav--icon + .navbar__nav--link {
-  margin-left: 10px;
-}
-
-/*
-    STYLE ARTICLE DU BLOG AVEC METHODE BEM
-*/
-.post {
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-}
-
-.post__header {
-  position: relative;
-}
-
-.post__header--categories {
-  font-family: "Francois One", sans-serif;
-  color: #FFFF;
-  text-shadow: 1px 1px 2px #000000;
-  position: absolute;
-  margin: 5px 10px;
-}
-
-.post__header--img {
-  max-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-}
-
-.post__body {
-  padding: 3% 2% 3% 2%;
-}
-
-.post__body--title {
-  margin: 0;
-  margin-bottom: 2%;
-  color: #e78300;
-  cursor: pointer;
-}
-
-.post__body--title:hover {
-  color: #ce7500;
-}
-
-.post__body--title:after {
-  content: "";
-  background: #000000;
-  height: 5px;
-  width: 3em;
-  display: block;
-  margin-top: 0.2em;
-}
-
-span {
-  display: block;
-}
-
-.post__meta--favicon {
-  margin-right: 7px;
-}
-
-.post__meta--author {
-  color: #000000;
-}
-
-.post__body--excerpt {
-  color: #928f8f;
-  text-align: justify;
-}
-
-/* 
-    ROTATION SUR LES ARTICLES, 
-    - PAIR
-    - IMPAIRE
-*/
-#content section:nth-child(even) .post {
-  transform: rotate(-1deg);
-}
-
-#content section:nth-child(odd) .post {
-  transform: rotate(1deg);
-}
-
-.block-btn {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.btn {
-  background-color: #FFFF;
-  color: #000000;
-  padding: 0% 25px;
-  border-radius: 20px;
-  border: 1px solid #000000;
-  margin-right: 10%;
-}
-
-.btn__link {
-  margin-right: 5px;
-  color: #000000;
-  text-decoration: none;
+  .header_text {
+    margin-right: 30%;
+  }
 }
 
 /*# sourceMappingURL=app.css.map */
