--- a/public/sass/_header.scss
+++ b/public/sass/_header.scss
@@ -1,6 +1,8 @@
 
 
-
+/*
+    STYLE HEADER 
+*/
 
 
 header {
@@ -12,55 +14,54 @@ header {
 }
 
 .bannerHeader {
-    height: 55px;
-
-    display: flex;
-    flex-direction: column;
-    // justify-content: space-between;
-    // align-items: flex-end;
+    @include banner($font_size: 1.5rem);
 }
 
-// BANNER TITLE
-.bannerHeader__title {
-    height: 25px;
-    
-    display: flex;
-    align-items: center;
-
-    padding-left: 15px;
-}
-
-// LOGO
-.bannerHeader__title--logo {
-    width: 35px;
-    margin-right: 20px;
-}
-
-// TITLE SITE
-.bannerHeader__title--title {
-    font-family: $font_title;
-    font-size: 1.5rem;
-    font-weight: 800;
-}
-
-// NAVBAR HEADER
-.bannerHeader__navbar {
-    display: flex;
-    justify-content: flex-end;
-
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.bannerHeader__navbar--icon {
-    margin: 5px;
-}
-
-
-// 
 .header_text {
     color: $color_secondary;
     text-align: justify;
 }
+
+// .bannerHeader {
+//     height: 55px;
+
+//     display: flex;
+//     flex-direction: column;
+// }
+
+// // BANNER TITLE
+// .bannerHeader__title {
+//     height: 25px;
+    
+//     display: flex;
+//     align-items: center;
+// }
+
+// // LOGO
+// .bannerHeader__title--logo {
+//     width: 35px;
+//     margin-right: 20px;
+// }
+
+// // TITLE SITE
+// .bannerHeader__title--title {
+//     font-size: 1.5rem;
+// }
+
+// // NAVBAR HEADER
+// .bannerHeader__navbar {
+//     display: flex;
+//     justify-content: flex-end;
+
+//     list-style: none;
+//     margin: 0;
+//     padding: 0;
+// }
+
+// .bannerHeader__navbar--icon {
+//     margin: 5px;
+// }
+
+// 
+
 
