--- a/public/sass/_reboot.scss
+++ b/public/sass/_reboot.scss
@@ -1,5 +1,16 @@
+
+@font-face {
+	font-family: "Francois One";
+	src: url('../font/Francois_One/FrancoisOne-Regular.ttf');
+}
+
+@font-face {
+	font-family: "Didact Gothic";
+	src: url('../font/Didact_Gothic/DidactGothic-Regular.ttf');
+}
+
 body {
-    font-family: "Didact Gothic";
+    font-family: $font_text;
     margin: 0;
     padding: 0;
     color: $color_primary;
@@ -20,9 +31,8 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Francois One", sans-serif;
+    font-family: $font_title;
     font-style: normal;
-    font-weight: normal;
     color: inherit;
     text-rendering: optimizeLegibility;
     font-weight: 800;
