--- a/public/sass/_variables.scss
+++ b/public/sass/_variables.scss
@@ -11,14 +11,22 @@ $color_title: #e78300;
 $color_secondary: #928f8f;
 $color_primary: #000000;
 
-$color_cathegories: #FFFF;
-$bg_banner: #FFFF;
+// POST VARIABLE
+// $color_cathegories: #FFFFFF;
+$bg_post: #FFFFFF;
+$color_cathegories_post: #FFFFFF;
+$color_title_post: #e78300;
+$color_hr_post: #000000;
+$color_meta_post: #000000;
+$color_excerpt_post: #928f8f;
+
+$post_rotate_even: -1deg;
+$post_rotate_odd: 1deg;
+
+$bg_banner: #FFFFFF;
 
 $font_title: "Francois One", sans-serif;
 $font_text: "Didact Gothic", sans-serif;
 
-$btn_bg: #FFFF;
+$btn_bg: #FFFFFF;
 $btn_color: #000000;
-
-$post_rotate_even: -1deg;
-$post_rotate_odd: 1deg;
