--- a/public/sass/mixins/_navbar.scss
+++ b/public/sass/mixins/_navbar.scss
@@ -27,6 +27,10 @@
         margin-left: 30px;
     }
 
+    &__nav--link:hover {
+        color: darken($color_title, 5%);
+    }
+
     //  lien avec un icon
     &__nav--icon+&__nav--link {
         margin-left: 10px;
