--- a/public/sass/_build.scss
+++ b/public/sass/_build.scss
@@ -60,9 +60,9 @@ header {
 .block-btn {
     display: flex;
     justify-content: flex-end;
-
 }
 
 .btn {
     @include btn();
+    margin-right: 10%;
 }
